# GantryGame3.0

./: .gitignore  .images copy.json.icloud  .images.json.icloud  .rust.so.icloud  Cargo.toml  ODrive_Ease_Lib.py  Picasso_Bot_Gui.py  README.md  acceltesting.py  arc_accel_testing.py  autoCalibrate.py  auto_edge.py  blackout.py  calc_arc.py  client_secret.json  controller.py  cool_library  draw_image.py  edgemanipulator.py  face_full_processing.py  faceanalyzer.py  facestuff.py  frequency_response.html  frequency_response.py  full_edge_conversion.py  full_face_processing.py  full_path_planning.py  gantry.py  grapher.py  guess_what_this_does.py  hatchdraw.py  hometesting.py  idle.py  image_processing.py  images.json  invite link  main.kv  main.py  next_tasks.txt  odriveresetter.py  (+38 more)
main_controller/: controller.py
old_poop/: ODriveMotors.py  ODrive_Ease_Lib.py  README.md  _ODrive_Ease_Lib.py  circle.py  files for y fixing  main.kv  main.py  next_tasks.txt  ooga  planner.py  poo_poo.json  required mechanical changes.txt  toggleGrip.py  trajectoryTest.py
old_poop/GUI/: color_screen.kv  color_screen.py  drawing_screen.kv  drawing_screen.py  gallery.kv  gallery.py  gallery_screen.kv  gallery_screen.py  image_button.py  joystick.py  joystick_screen.kv  joystick_screen.py  main_screen.kv  main_screen.py  prep_draw_screen.kv  prep_draw_screen.py
src/: _main.rs  lib.rs  main.rs
tuning/: autoCalibrate.py  config.py  grapher.py  main.py  tuning.py
